# opensearch-mcp-server

./: README.md  pyproject.toml
scripts/: test_connection.py
src/: mcp_server.py  server.py
src/opensearch/: client.py  config.py
src/opensearch/tools/: __init__.py  list_indices.py
